# Repo10_SOFAR-assignment-final

./: README.md
object_following_robot/: package.xml  setup.cfg  setup.py
object_following_robot/launch/: bringup_launch.py  localization_launch.py  multi_robot_simulation_launch.py  navigation_launch.py  robot_gazebo_spawn_launch.py  rviz_launch.py  single_robot_simulation_launch.py  slam_launch.py
object_following_robot/models/two_wheeled_robot_description/: model.sdf  model1.sdf  model2.sdf
object_following_robot/object_following_robot/: robot2_pose_publisher.py
object_following_robot/params/: nav2_robot1_params.yaml  nav2_robot2_params.yaml
object_following_robot/rviz/: nav2_config.rviz  nav2_config_multiple_robots.rviz
object_following_robot/worlds/: house.world
